@@ -36,7 +36,7 @@ setlocal EnableDelayedExpansion
 
 if not defined XWIKI_OPTS set XWIKI_OPTS=-Xmx1024m
 
-REM The port on which to start Jetty can be defined in an enviroment variable called JETTY_PORT
+REM The port on which to start Jetty can be defined in an environment variable called JETTY_PORT
 if not defined JETTY_PORT (
   REM Alternatively, it can be passed to this script as the first argument
   set JETTY_PORT=%1
@@ -45,7 +45,7 @@ if not defined JETTY_PORT (
   )
 )
 
-REM The port on which Jetty listens for a Stop command can be defined in an enviroment variable called JETTY_STOP_PORT
+REM The port on which Jetty listens for a Stop command can be defined in an environment variable called JETTY_STOP_PORT
 if not defined JETTY_STOP_PORT (
   REM Alternatively, it can be passed to this script as the second argument
   set JETTY_STOP_PORT=%2
@@ -54,8 +54,6 @@ if not defined JETTY_STOP_PORT (
   )
 )
 
-echo Starting Jetty on port %JETTY_PORT%, please wait...
-
 REM Discover java.exe from the latest properly installed JRE
 for /f tokens^=2^ delims^=^" %%i in ('reg query HKEY_CLASSES_ROOT\jarfile\shell\open\command /ve') do set JAVAW_PATH=%%i
 set JAVA_PATH=%JAVAW_PATH:\javaw.exe=%\java.exe
@@ -63,9 +61,24 @@ if "%JAVA_PATH%"=="" set JAVA_PATH=java
 REM Handle the case when JAVA_HOME is set by the user
 if not "%JAVA_HOME%" == "" set JAVA_PATH=%JAVA_HOME%\bin\java.exe
 
+REM TODO: Remove once https://jira.xwiki.org/browse/XCOMMONS-2852 is fixed. In summary we need this to allow the XWiki
+REM code or 3rd party code to use reflection to access private variables (setAccessible() calls).
+REM See https://tinyurl.com/tdhkn6mp
+set XWIKI_OPENS_LANG=--add-opens java.base/java.lang=ALL-UNNAMED
+set XWIKI_OPENS_IO=--add-opens java.base/java.io=ALL-UNNAMED
+set XWIKI_OPENS_UTIL=--add-opens java.base/java.util=ALL-UNNAMED
+set XWIKI_OPENS_CONCURRENT=--add-opens java.base/java.util.concurrent=ALL-UNNAMED
+set XWIKI_OPTS=%XWIKI_OPENS_LANG% %XWIKI_OPENS_IO% %XWIKI_OPENS_UTIL% %XWIKI_OPENS_CONCURRENT% %XWIKI_OPTS%
+
 REM Location where XWiki stores generated data and where database files are.
 set XWIKI_DATA_DIR=${xwikiDataDir}
 set XWIKI_OPTS=%XWIKI_OPTS% -Dxwiki.data.dir="%XWIKI_DATA_DIR%"
+
+REM Make sure the standard Java tmpdir is isolated per instance (by default Jetty provides applications work dir in the Java tmpdir)
+set JAVA_TMP=tmp
+set XWIKI_OPTS=%XWIKI_OPTS% -Djava.io.tmpdir=%JAVA_TMP%
+REM Make sure the Java tmpdir exist since Jenkins does not create it
+if not exist "%JAVA_TMP%" mkdir "%JAVA_TMP%"
 
 REM Catch any Out Of Memory to make easier to analyze it
 set XWIKI_OPTS=%XWIKI_OPTS% -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath="%XWIKI_DATA_DIR%"
@@ -76,16 +89,11 @@ if not exist "%XWIKI_DATA_DIR%" mkdir "%XWIKI_DATA_DIR%"
 REM Ensure the logs directory exists as otherwise Jetty reports an error
 if not exist "%XWIKI_DATA_DIR%\logs" mkdir "%XWIKI_DATA_DIR%\logs"
 
-REM Set up the Jetty Base directory (used for custom Jetty configuration) to point to the Data Directory
-REM Also created some Jetty directorie that Jetty would otherwise create at first startup. We do this to avoid
-REM cryptic messages in the logs such as: "MKDIR: ${jetty.base}/lib"
-set JETTY_BASE=%XWIKI_DATA_DIR%\jetty
-if not exist "%JETTY_BASE%" mkdir "%JETTY_BASE%"
-if not exist "%JETTY_BASE%\lib" mkdir "%JETTY_BASE%\lib"
-if not exist "%JETTY_BASE%\lib\ext" mkdir "%JETTY_BASE%\lib\ext"
+REM Set up the Jetty Base directory (used for custom Jetty configuration) to be the current directory where this file
+REM is.
+REM Also make sure the log directory exists since Jetty won't create it.
+set JETTY_BASE=.
 if not exist "%JETTY_BASE%\logs" mkdir "%JETTY_BASE%\logs"
-if not exist "%JETTY_BASE%\resources" mkdir "%JETTY_BASE%\resources"
-if not exist "%JETTY_BASE%\webapps" mkdir "%JETTY_BASE%\webapps"
 
 REM Specify Jetty's home and base directories
 set JETTY_HOME=jetty
@@ -103,7 +111,7 @@ set XWIKI_OPTS=%XWIKI_OPTS% -Djetty.http.port=%JETTY_PORT%
 REM Specify port and key to stop a running Jetty instance
 set JETTY_OPTS=%JETTY_OPTS% STOP.KEY=xwiki STOP.PORT=%JETTY_STOP_PORT%
 
-"%JAVA_PATH%" %XWIKI_OPTS% %3 %4 %5 %6 %7 %8 %9 -jar "%JETTY_HOME%/start.jar" --module=xwiki %JETTY_OPTS%
+"%JAVA_PATH%" %XWIKI_OPTS% %3 %4 %5 %6 %7 %8 %9 -jar "%JETTY_HOME%/start.jar" %JETTY_OPTS%
 
 REM Pause so that the command window used to run this script doesn't close automatically in case of problem
 REM (like when the JDK/JRE is not installed)
